crates/swc/tests/tsc-references/classExtendsItselfIndirectly3.1.normal.js
//// [classExtendsItselfIndirectly_file1.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var C = /*#__PURE__*/ function(E1) {
    "use strict";
    _inherits(C, E1);
    function C() {
        _class_call_check(this, C);
        return _call_super(this, C, arguments);
    }
    return C;
} // error
(E);
//// [classExtendsItselfIndirectly_file2.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var D = /*#__PURE__*/ function(C1) {
    "use strict";
    _inherits(D, C1);
    function D() {
        _class_call_check(this, D);
        return _call_super(this, D, arguments);
    }
    return D;
}(C);
//// [classExtendsItselfIndirectly_file3.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var E = /*#__PURE__*/ function(D1) {
    "use strict";
    _inherits(E, D1);
    function E() {
        _class_call_check(this, E);
        return _call_super(this, E, arguments);
    }
    return E;
}(D);
//// [classExtendsItselfIndirectly_file4.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var C2 = /*#__PURE__*/ function(E21) {
    "use strict";
    _inherits(C2, E21);
    function C2() {
        _class_call_check(this, C2);
        return _call_super(this, C2, arguments);
    }
    return C2;
} // error
(E2);
//// [classExtendsItselfIndirectly_file5.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var D2 = /*#__PURE__*/ function(C21) {
    "use strict";
    _inherits(D2, C21);
    function D2() {
        _class_call_check(this, D2);
        return _call_super(this, D2, arguments);
    }
    return D2;
}(C2);
//// [classExtendsItselfIndirectly_file6.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var E2 = /*#__PURE__*/ function(D21) {
    "use strict";
    _inherits(E2, D21);
    function E2() {
        _class_call_check(this, E2);
        return _call_super(this, E2, arguments);
    }
    return E2;
}(D2);
